fixed weird white space on right for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ body{
 	margin-left: -1%;
 }*/
 /*NEW WRAPPER TRY OUT PARALLAX*/
+.row{
+	margin-right: 0px!important;
+}
 .wrapper{
 	min-height: 760px;
 	
